@@ -376,17 +376,48 @@ gconf_engine_detach (GConfEngine *conf)
 static gboolean
 ensure_dbus_connection (void)
 {
+  const gchar *address;
+  DBusError error;
+
   if (global_conn != NULL)
     return TRUE;
  
 #ifdef USE_SYSTEM_BUS
-  global_conn = dbus_bus_get (DBUS_BUS_SYSTEM, NULL);
+  address = g_getenv ("DBUS_SYSTEM_BUS_ADDRESS");
+
+  if (!address)
+    address = GCONF_SYSTEM_BUS_ADDRESS;
 #else
-  global_conn = dbus_bus_get (DBUS_BUS_SESSION, NULL);
+  address = g_getenv ("DBUS_SESSION_BUS_ADDRESS");
 #endif
 
-  if (global_conn == NULL)
+  if (!address) {
     return FALSE;
+  }
+
+  dbus_error_init (&error);
+
+  global_conn = dbus_connection_open (address, &error);
+  if (!global_conn) 
+    {
+      g_warning ("Failed to connect to the D-BUS daemon: %s", error.message);
+      
+      dbus_error_free (&error);
+      return FALSE;
+    }
+	
+  if (!dbus_bus_register (global_conn, &error)) 
+    {
+      g_warning ("Failed to register with the D-BUS daemon: %s", error.message);
+      
+      dbus_connection_disconnect (global_conn);
+      dbus_connection_unref (global_conn);
+      
+      global_conn = NULL;
+		
+      dbus_error_free (&error);
+      return FALSE;
+    }
 
   dbus_connection_setup_with_g_main (global_conn, NULL);
 
